affichage des articles

--- a/public/addArticle.html
+++ b/public/addArticle.html
@@ -27,6 +27,6 @@
     </form>
   </section>
 </body>
-<script src="script.js" language="JavaScript" type="text/javascript"></script>
+<script src="js/script.js" language="JavaScript" type="text/javascript"></script>
 
 </html>
