--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,9 @@
     <h1>Bienvenue sur mon blog !</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, excepturi!</p>
   </section>
-  <section></section>
+  <section id="showArticles">
+    <div id="articlesContainer"></div>
+  </section>
 </body>
-
+<script src="js/script.js" language="JavaScript" type="text/javascript"></script>
 </html>
