mise en place de la suppression

--- a/public/article.html
+++ b/public/article.html
@@ -18,6 +18,7 @@
   </nav>
   <section id="showArticle">
     <div id="articleContainer"></div>
+    <button id="deleteArticle">Supprimer</button>
   </section>
 </body>
 <script src="js/script.js" language="JavaScript" type="text/javascript"></script>
